Fix video causing overflow

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -627,7 +627,7 @@ hr {
 
 .vid-insert-wrap {
   position: relative;
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
 }
 
